<resources>
    <string name="app_name">Займы онлайн</string>
    <string name="user_name">Имя пользователя</string>
    <string name="user_password">Пароль</string>
    <string name="login">Войти</string>
    <string name="registrate">Зарегистрироваться</string>
    <string name="user_name_example">Иванов</string>
    <string name="yet_registrate">Уже зарегистрированы? Войти</string>
    <string name="enter_last_name">Введите фамилию</string>
    <string name="enter_first_name">Введите имя</string>
    <string name="ivanov">Иванов</string>
    <string name="ivan">Иван</string>
    <string name="amount">Сумма</string>
    <string name="percent">Процент</string>
    <string name="mobile_number">Номер мобильного телефона</string>
    <string name="period">Период</string>
    <string name="send">Отправить</string>
    <string name="percent_example">10%</string>
    <string name="hint_number">1234567890</string>
    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="telephone_number">Номер телефона</string>
    <string name="loan_amount">Сумма займа</string>
    <string name="status_loan">Статус займа</string>
    <string name="toolbar">Займы онлайн</string>
    <string name="number_mask">+7(###)###-##-##</string>
    <string name="use_correct_value">Введите корректные значения</string>
    <string name="date_loan">Дата займа</string>
    <string name="accepted_loan">Вы можете забрать займ в банке или получить его на карту</string>
    <string name="registered_loan">Ваша заявка зарегистрирована, ожидайте</string>
    <string name="rejected_loan">Ваша заявка была отклонена</string>
    <string name="conditions_loaded">Условия были загружены</string>
    <string name="accepted">Одобрено</string>
    <string name="registrated">Зарегистрировано</string>
    <string name="rejected">Отклонено</string>
    <string name="notificationWorker">notificationWorker</string>
    <string name="approved">APPROVED</string>
</resources>