<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.add_new_loan_screen.fragment.AddNewLoanFragment">

    <TextView
        android:id="@+id/last_name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_last_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/first_name_tv"
        />

    <EditText
        android:id="@+id/last_name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name_tv"
        app:layout_constraintEnd_toStartOf="@id/first_name_et"
        android:hint="@string/ivanov"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/first_name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_first_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/last_name_tv"/>

    <EditText
        android:id="@+id/first_name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name_tv"
        app:layout_constraintStart_toEndOf="@id/last_name_et"
        android:hint="@string/ivan"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/amount_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/last_name_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/percent_tv"
        />

    <EditText
        android:id="@+id/amount_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/amount_tv"
        android:hint="@string/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/percent_et"
        android:enabled="false"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/percent_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/amount_tv"
        app:layout_constraintTop_toBottomOf="@id/first_name_et"
        />

    <EditText
        android:id="@+id/percent_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/percent_tv"
        app:layout_constraintStart_toEndOf="@id/amount_et"
        android:hint="@string/percent_example"
        android:enabled="false"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/period_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/period"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_et"
        app:layout_constraintEnd_toStartOf="@id/mobile_number_tv"
        />

    <EditText
        android:id="@+id/period_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/period"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/period_tv"
        app:layout_constraintEnd_toStartOf="@id/mobile_number_et"
        android:inputType="number"
        android:enabled="false"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/mobile_number_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/percent_et"
        app:layout_constraintStart_toEndOf="@id/period_tv"
        />

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/mobile_number_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mobile_number_tv"
        app:layout_constraintStart_toEndOf="@id/period_et"
        android:typeface="monospace"
        mask:allowed_chars="1234567890"
        mask:mask="+7(###)###-##-##"
        android:inputType="phone"
        android:maxLength="16"
        />

    <Button
        android:id="@+id/send_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/send"
        />

    <ProgressBar
        android:id="@+id/add_loan_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>